INTYGFV-14370: Upgrade to gradle 6.9.2, updated springboot-bom and cxf versions, applied necessary code changes.